// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`context menu tests rightclick scalar addrs :: 1`] = `
Array [
  "id",
  "scalar",
  "2",
  "::",
]
`;

exports[`context menu tests rightclick scalar addrs 1.1.1.1 1`] = `
Array [
  "id",
  "scalar",
  "1",
  "1.1.1.1",
]
`;

exports[`context menu tests rightclick scalar addrs fe80::58d2:2d09:e8cb:a8ad 1`] = `
Array [
  "id",
  "scalar",
  "3",
  "fe80::58d2:2d09:e8cb:a8ad",
]
`;

exports[`context menu tests rightclick scalar strings " 1`] = `
Array [
  "id",
  "scalar",
  "18",
  "\\"",
]
`;

exports[`context menu tests rightclick scalar strings "*" 1`] = `
Array [
  "id",
  "scalar",
  "27",
  "\\"*\\"",
]
`;

exports[`context menu tests rightclick scalar strings "mystr" 1`] = `
Array [
  "id",
  "scalar",
  "24",
  "\\"mystr\\"",
]
`;

exports[`context menu tests rightclick scalar strings ' ' (space) 1`] = `
Array [
  "id",
  "scalar",
  "54",
  "",
  "55",
  "",
]
`;

exports[`context menu tests rightclick scalar strings ' 1`] = `
Array [
  "id",
  "scalar",
  "19",
  "'",
]
`;

exports[`context menu tests rightclick scalar strings 'mystr' 1`] = `
Array [
  "id",
  "scalar",
  "25",
  "'mystr'",
]
`;

exports[`context menu tests rightclick scalar strings * 1`] = `
Array [
  "id",
  "scalar",
  "26",
  "*",
]
`;

exports[`context menu tests rightclick scalar strings , 1`] = `
Array [
  "id",
  "scalar",
  "20",
  ",",
  "21",
  ",",
]
`;

exports[`context menu tests rightclick scalar strings ; 1`] = `
Array [
  "id",
  "scalar",
  "22",
  ";",
]
`;

exports[`context menu tests rightclick scalar strings \\t (tab) 1`] = `
Array [
  "id",
  "scalar",
  "14",
  "mystr",
  "15",
  "(empty)",
  "16",
  "-",
  "17",
  "",
  "18",
  "\\"",
  "19",
  "'",
  "20",
  ",",
  "21",
  ",",
  "22",
  ";",
  "23",
  "∫£œßü™",
  "24",
  "\\"mystr\\"",
  "25",
  "'mystr'",
  "26",
  "*",
  "27",
  "\\"*\\"",
  "28",
  "1.1.1.1",
  "54",
  "",
  "55",
  "",
  "56",
  "⦻",
  "57",
  "null",
]
`;

exports[`context menu tests rightclick scalar strings - 1`] = `
Array [
  "id",
  "scalar",
  "16",
  "-",
]
`;

exports[`context menu tests rightclick scalar strings 1.1.1.1 1`] = `
Array [
  "id",
  "scalar",
  "28",
  "1.1.1.1",
]
`;

exports[`context menu tests rightclick scalar strings mystr 1`] = `
Array [
  "id",
  "scalar",
  "14",
  "mystr",
]
`;

exports[`context menu tests rightclick scalar strings null 1`] = `
Array [
  "id",
  "scalar",
  "57",
  "null",
]
`;

exports[`context menu tests rightclick scalar strings ∫£œßü™ 1`] = `
Array [
  "id",
  "scalar",
  "23",
  "∫£œßü™",
]
`;

exports[`context menu tests rightclick scalar strings ⦻ 1`] = `
Array [
  "id",
  "scalar",
  "56",
  "⦻",
]
`;

exports[`context menu tests rightclick scalar unset unset 1`] = `
Array [
  "id",
  "scalar",
  "61",
  "⦻",
  "60",
  "⦻",
  "59",
  "⦻",
  "58",
  "⦻",
  "53",
  "⦻",
  "52",
  "⦻",
  "51",
  "⦻",
  "50",
  "⦻",
  "49",
  "⦻",
  "48",
  "⦻",
]
`;
